--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Min | A smarter, faster web browser</title>
+	<title>Bit | A smarter, faster web browser</title>
 	<link rel="stylesheet" href="splash/splash.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 	<div class="hero">
-		<div class="blue-gradient-background blue-gradient-top">
+		<div class="blue">
 		</div>
 		<div class="centered color-white">
 			<h1 class="title-heading">Bit.</h1>
