--- a/index.html
+++ b/index.html
@@ -10,29 +10,40 @@
 
 <body>
 	<div class="hero">
-		<div class="blue">
+		<div class="blue-gradient-background blue-gradient-top">
 		</div>
 		<div class="centered color-white">
-			<h1 class="title-heading">Bit.</h1>
-			<h1 class="title-subheading">Minimal web browser.</h1>
+			<h1 class="title-heading">Meet Bin.</h1>
+			<h1 class="title-subheading">A smarter web browser built on Min.</h1>
 			<a class="inherit-color" href="https://github.com/KingPixil/bit/releases/latest">
-				<button class="outlined-button primary-action-button download-button"><span class="button-label">Download</span>
+				<button class="outlined-button primary-action-button download-button"><span class="button-label">Download Bit</span>
 					<span class="button-subtext">Requires Mac OS X 10.10 or greater</span>
 				</button>
 			</a>
 		</div>
 	</div>
+
+	<div class="section one-column blue-gradient-background color-white">
+		<div class="column">
+			<h1 class="title-heading">Try Bit</h1>
+			<a class="inherit-color" href="https://github.com/KingPixil/bit/releases/latest">
+				<button class="outlined-button primary-action-button download-button" style="margin-top: 1em"><span class="button-label">Download Bit</span>
+					<span class="button-subtext">Requires Mac OS X 10.10 or greater</span>
+				</button>
+			</a>
+		</div>
+	</div>
+
 	<div class="backdrop" hidden="true"></div>
 	<div class="dialog centered" hidden="true">
-		<h1>How to install Min</h1>
+		<h1>How to install Bit</h1>
 		<ul>
-			<li>Drag Min from your downloads folder to the Applications folder.</li>
-			<li>If you see a message that "Min can’t be opened because it is from an unidentified developer":
+			<li>Drag Bit from your downloads folder to the Applications folder.</li>
+			<li>If you see a message that "Bit can’t be opened because it is from an unidentified developer":
 				<ul>
-					<li>Open System Preferences (from the Apple menu)</li>
-					<li>Click on "Security &amp; Privacy"</li>
-					<li>Click "Open Anyway"</li>
-					<li>Enter your password if needed.</li>
+					<li>Right Click On Bit.app</li>
+					<li>Click "Open"</li>
+					<li>You Have Bit!</li>
 				</ul>
 			</li>
 		</ul>
