--- a/pages/settings/index.html
+++ b/pages/settings/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Privacy Settings |Min</title>
+	<title>Privacy Settings | Bit</title>
 	<link rel="stylesheet" href="../../css/base.css" />
 	<link rel="stylesheet" href="settings.css" />
 	<link rel="stylesheet" href="../../ext/font-awesome-4.4.0/css/font-awesome.min.css" />
